# A.S.2

./: .clang-format  .clangd  .gitignore  .pylintrc  CMakeLists.txt  Makefile  README.md  build.sh  runme.py
Config/: params.yaml
Src/: Predict.py  __init__.py  data_processing.py  train.py  utils.py
config/: params.yaml
dynamo_/src/: main.cpp
src/: __init__.py  data_processing.py  model.py  predict.py  train.py
